SERVER-24920 fix false positives for `Value::integral` on non-integral decimal values